--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,7 +6,10 @@ on:
   pull_request:
   workflow_dispatch:
   schedule:
-    - cron: '30 3 * * *'  # Runs every day at 9:00 AM IST
+    - cron: '30 3 * * *' # 9:00 AM IST (cron runs in UTC)
+
+permissions:
+  contents: write  # <-- gh-pages push
 
 jobs:
   test:
@@ -14,12 +17,13 @@ jobs:
 
     steps:
       - name: ⬇️ Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: 🟢 Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
+          cache: 'npm'
 
       - name: 📦 Install dependencies
         run: npm ci
@@ -27,15 +31,29 @@ jobs:
       - name: 🎭 Install Playwright Browsers
         run: npx playwright install --with-deps
 
+      # passing env directly to the test runner...
       - name: 🚀 Run Playwright Tests
-        run: npx playwright test
-        continue-on-error: true  # ✅ Run all steps even if tests fail
+        env:
+          DEMOQA_BASE_URL: ${{ secrets.DEMOQA_BASE_URL }}
+          DEMOQA_USERNAME: ${{ secrets.DEMOQA_USERNAME }}
+          DEMOQA_PASSWORD: ${{ secrets.DEMOQA_PASSWORD }}
+        run: npx playwright test --reporter=html
+        continue-on-error: true   # keep going to upload report
 
       - name: 📤 Upload Playwright HTML Report
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: playwright-report
+          if-no-files-found: warn
+
+      # keep traces/videos for debugging
+      - name: 📤 Upload test-results (traces/videos)
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: test-results
+          if-no-files-found: ignore
 
   deploy:
     if: github.ref == 'refs/heads/main' || github.event_name == 'schedule'
@@ -44,7 +62,7 @@ jobs:
 
     steps:
       - name: ⬇️ Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: 📥 Download Playwright Report Artifact
         uses: actions/download-artifact@v4
@@ -57,3 +75,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./playwright-report
+          publish_branch: gh-pages
+          force_orphan: true
